FEAT: btn close modal mode in article quick service

--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -340,6 +340,12 @@
             <!-- // QUICK SERVICE - NAV 5 HOTEL CAR -->
           </ul>
           <!-- // QUICK SERVICE - NAV -->
+
+          <button
+            type="button"
+            class="btn-close-modal-mode"
+            aria-label="퀵 서비스 모달 닫기"
+          ></button>
         </div>
       </article>
       <!-- // QUICK SERVICE -->
